Use isEmpty() instead of isBlank()
Signed-off-by: Taewan Kim <t25.kim@samsung.com>